Fixed img in boxes - added vertical-align into css file

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -14,9 +14,10 @@ img
 	height: auto
 	width: 100%
 	object-fit: cover
+	vertical-align: bottom
 
-*
-	outline: 1px solid red
+//*
+//	outline: 1px solid red
 
 body 
 	font-family: 'Times New Roman', serif
@@ -56,7 +57,7 @@ body
 		align-items: center
 		a:hover
 			color: $font-white
-			
+
 .menu
 	list-style-type: none
 	+flex
